--- a/m4a-to-srt/nextjs-frontend/package.json
+++ b/m4a-to-srt/nextjs-frontend/package.json
@@ -12,7 +12,9 @@
 	"dependencies": {
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"next": "15.4.6"
+		"next": "15.4.6",
+		"firebase": "^10.14.0",
+		"react-firebase-hooks": "^5.1.1"
 	},
 	"devDependencies": {
 		"typescript": "^5",
